Avoid overlap between title and legend

--- a/scss/download.scss
+++ b/scss/download.scss
@@ -7,4 +7,8 @@
     .leaflet-control-fit-bounds {
         display: none !important;
     }
+
+    .dhis2-maps-name .leaflet-top {
+        top: 40px;
+    }
 }
